# tyche

./: .gitignore  CMakeLists.txt  Makefile  Makefile_  README.md  TODO.md
.gitea/workflows/: clang.yaml  gcc.yaml
.old/: compiler.lua
.old/assembler/: assembler.hh  lexer.cc
.old/src/assembler/: as_exceptions.hh  assembler.cc  assembler.hh  lexer.cc  lexer.hh  tests.cc
.old/src/bytecode/: bc_exceptions.hh  bytecode.cc  bytecodeprototype.hh  constant.hh
.old/src/common/: bytearray.cc
.old/src/vm/: instruction.cc  location.hh  stack.hh  value.cc  vm.cc  vm.hh  vm_exceptions.hh
config/: WARNINGS  WARNINGS_CLANG  WARNINGS_GCC
doc/: BYTECODE  OPCODES  VM  VM.md
lib/: _table.c  array.c  code.c  compiler.c  expr.c  heap.c  priv.h  stack.c  step.c  table.c  tyche.h  utils.c  value.c  vm.c
lib/assembler/: adj_labels.c  assembler.c  assembler_priv.h  assembly.c  bytecode.c
lib/compiler/: assembler.c  assembly.c  compiler.lua  compiler_priv.h  grammar.txt  lexer.c  parser.c
lib/instructions/: .gitignore  gen-inst.lua  gen-inst.sh
lua-temp/: TODO.md  tests.lua  tyche-as.lua  tyche-vm.lua
lua-temp/doc/: OPCODES  VM
src/: .gitignore  test.tya  tests.yaml  tyche.c  usage.txt
src/assembler/: as_exceptions.hh  assembler.cc  assembler.hh  lexer.cc  lexer.hh  tests.cc
src/bytearray/: bytearray.cc  bytearray.hh  bytearraybuilder.cc  bytearraybuilder.hh  tests.cc
src/bytecode/: bytearray.cc  bytearray.hh  bytecode.cc  bytecode.hh  bytecodeprototype.hh  constant.hh  tests.cc
src/common/: bytearray.cc  bytearray.hh  overloaded.hh
src/instructions/: instruction.cc  instruction.hh
src/vm/: code.cc  code.hh  expr.cc  expr.hh  instruction.cc  instruction.hh  stack.cc  stack.hh  tests.cc  value.cc  value.hh  vm.cc  vm.hh  vm_exceptions.hh
test/: code-tests-exhaustive.lua  code-tests.lua  tests-array.cc  tests-as.c  tests-as.cc  tests-assembly.cc  tests-compiler.c  tests-expr.cc  tests-heap.cc  tests-op.c  tests-op.toml  tests-stack.cc  tests-table.cc  tests-values.cc  tests-vm.c  tests-vm.cc  tests.c  tests.cc
test/test-code/: compiler.toml
